<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate" translatable="false">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="order">Order</string>
    <string name="email_subject">Just Java order from <xliff:g id="hasName">%s</xliff:g></string>
    <string name="email_name">Name: <xliff:g id="hasName">%s</xliff:g></string>
    <string name="add_whipped_cream">Add whipped cream? <xliff:g id="addWhippedCream">%b</xliff:g></string>
    <string name="add_chocolate">Add chocolate? <xliff:g id="addChocolate">%b</xliff:g></string>
    <string name="email_quantity">Quantity: <xliff:g id="quantity">%d</xliff:g></string>
    <string name="email_price" translatable="false">Total: <xliff:g id="quantity">%s</xliff:g></string>
    <string name="thank_you">Thank you!</string>
</resources>
